--- a/.github/workflows/ge_pr_push.yml
+++ b/.github/workflows/ge_pr_push.yml
@@ -34,7 +34,7 @@ jobs:
         github-token: ${{ secrets.TOKEN }}
         script:
             if (process.env.FAILURE_FLAG == 1 ) {
-              msg = `Failed Great Expectations Checkpoint(s) \`${process.env.FAILED_CHECKPOINTS}\` detected for: ${process.env.SHA}.  Corresponding Data Docs have been generated and can be viewed [here](${process.env.DOCS_LOCATION}).`;
+              msg = `Failed Great Expectations Checkpoint(s) detected for: ${process.env.SHA}.  Corresponding Data Docs have been generated and can be viewed [here](${process.env.DOCS_LOCATION}).`;
             }else {
               msg = `All Checkpoints for: ${process.env.SHA} have passed.  Corresponding Data Docs have been generated and can be viewed [here](${process.env.DOCS_LOCATION}).`;
             }
