--- a/.github/workflows/ge_pr_push.yml
+++ b/.github/workflows/ge_pr_push.yml
@@ -29,9 +29,9 @@ jobs:
       # Comment on PR with link to deployed Data Docs if there is a failed Checkpoint, otherwise don't comment.
     - name: Comment on PR 
       if: ${{ always() }}
-      uses: actions/github-script@v3
+      uses: actions/github-script@v2
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ secrets.TOKEN }}
         script:
             if (process.env.FAILURE_FLAG == 1 ) {
               msg = `Failed Great Expectations Checkpoint(s) detected.  Corresponding Data Docs have been generated and can be viewed.`;
@@ -44,15 +44,15 @@ jobs:
             }
             console.log(${msg});
             github.issues.createComment({
-             issue_number:context.issue.number,
-             owner:context.repo.owner,
-             repo:context.repo.repo,
-             body:msg 
+                 issue_number:context.issue.number,
+                 owner:context.repo.owner,
+                 repo:context.repo.repo,
+                 body:msg 
             });
 		
       env:
-      	DOCS_LOCATION: ${{ steps.ge.outputs.action_docs_location }}
-	FAILED_CHECKPOINTS: ${{ steps.ge.outputs.failing_checkpoints }}
+        DOCS_LOCATION: ${{ steps.ge.outputs.action_docs_location }}
+        FAILED_CHECKPOINTS: ${{ steps.ge.outputs.failing_checkpoints }}
 	PASSED_CHECKPOINTS: ${{ steps.ge.outputs.passing_checkpoints }}
-	SHA: ${{ github.sha }}
-	FAILURE_FLAG: ${{ steps.ge.outputs.checkpoint_failure_flag }}
+        SHA: ${{ github.sha }}
+        FAILURE_FLAG: ${{ steps.ge.outputs.checkpoint_failure_flag }}
